global: actually fix spacing

--- a/controls.css
+++ b/controls.css
@@ -13,7 +13,7 @@ fieldset {
 	border-radius: 0;
 	box-shadow: var(--border-groupbox-box-shadow);
 
-	padding: 12px 11px 11px 6px;
+	padding: 12px 9px 11px 8px;
 	margin: 0;
 	margin-bottom: 8px;
 }
@@ -26,6 +26,8 @@ textarea {
 	outline: none;
 	font: var(--text-ui);
 	border: none;
+
+	margin: 0;
 
 	position: relative;
 	height: 21px;
