--- a/tabs.css
+++ b/tabs.css
@@ -11,10 +11,11 @@
 		1px 1px var(--color-tab-border);
 
 	margin: 2px 1px -1px 0;
-	padding: 2px 6px;
+	padding: 3px 4px 2px 6px;
 
 	position: relative;
-	height: 17px;
+	min-width: 45px;
+	height: 18px;
 
 	&::before,
 	&::after {
@@ -54,8 +55,9 @@
 
 		margin: 0 -2px -1px -4px;
 		padding: 3px 6px;
+		padding-left: 7px;
 
-		height: unset;
+		height: 21px;
 		z-index: 1;
 	}
 }
